<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menu"
    tools:context=".controller.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/loginNoun"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/primary_light"
            android:ems="12"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="password"
            android:backgroundTint="@color/primary_light"
            android:ems="12"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:textSize="13sp"
            android:textStyle="bold" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="30dp"
            android:text="@string/login" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/separatorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/or" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/register" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>